Ajout des variables d'environnement pour la configuration de la base de données et des paramètres JWT

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 MONGODB_URI=mongodb://localhost:27017/real-estate
 PORT=3000
+JWT_SECRET=votre_secret_jwt_ultra_securise_a_changer_en_production
+JWT_EXPIRE=30d
+NODE_ENV=development
