--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "real-estate-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "API pour la gestion des biens immobiliers",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "immobilier",
+    "api",
+    "express",
+    "mongodb",
+    "node"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -14,6 +22,14 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "multer": "^1.4.5-lts.1",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
